src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ringdna100__Call_Attempts__c</fullName>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Days_Since_Last_Attempt__c</fullName>
        <formula>IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), NULL, 
IF(AND(!ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Outbound_Call__c), 
IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), !ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Email_Attempt__c), 
IF(ringdna100__Last_Outbound_Call__c &gt; ringdna100__Last_Email_Attempt__c, (NOW() - ringdna100__Last_Outbound_Call__c), (NOW() - ringdna100__Last_Email_Attempt__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Attempt (Call or Email)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Email_Attempts__c</fullName>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Call__c</fullName>
        <label>First Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Call__c</fullName>
        <label>First Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Email_Attempt__c</fullName>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Call__c</fullName>
        <label>Last Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Call__c</fullName>
        <label>Last Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ringdna100__RingDNA_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RingDNA Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, NOW() - ringdna100__Last_Email_Attempt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, (NOW() - ringdna100__Last_Email_Attempt__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Dial_Minutes__c</fullName>
        <label>Time to First Dial (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Response__c</fullName>
        <label>Time to First Response (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>